[gd_scene load_steps=5 format=3 uid="uid://sos3wo863p7f"]

[ext_resource type="Script" path="res://main.gd" id="1_3fbsg"]
[ext_resource type="PackedScene" uid="uid://btga11mpq68bq" path="res://BG.tscn" id="1_sunmr"]
[ext_resource type="Theme" uid="uid://b0uwx4lwuweaf" path="res://Buttons.tres" id="2_mmren"]
[ext_resource type="Theme" uid="uid://cmh48a56jrpto" path="res://Text.tres" id="3_1xoip"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3fbsg")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_sunmr")]

[node name="Load_Game" type="Button" parent="."]
offset_left = 455.0
offset_top = 450.0
offset_right = 680.0
offset_bottom = 575.0
theme = ExtResource("2_mmren")
theme_override_font_sizes/font_size = 32
text = "Load Game"

[node name="New_Game" type="Button" parent="."]
offset_left = 455.0
offset_top = 230.0
offset_right = 680.0
offset_bottom = 355.0
theme = ExtResource("2_mmren")
theme_override_font_sizes/font_size = 32
text = "New Game"

[node name="Settings" type="Button" parent="."]
offset_left = 210.0
offset_top = 340.0
offset_right = 435.0
offset_bottom = 465.0
theme = ExtResource("2_mmren")
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Level_Select" type="Button" parent="."]
visible = false
offset_left = 21.0
offset_top = 484.0
offset_right = 246.0
offset_bottom = 609.0
theme = ExtResource("2_mmren")
text = "Levels
"

[node name="Quit" type="Button" parent="."]
offset_left = 700.0
offset_top = 340.0
offset_right = 925.0
offset_bottom = 465.0
theme = ExtResource("2_mmren")
theme_override_font_sizes/font_size = 32
text = "Quit
"

[node name="Title" type="Label" parent="."]
offset_left = 512.0
offset_top = 89.0
offset_right = 623.0
offset_bottom = 162.0
theme = ExtResource("3_1xoip")
theme_override_font_sizes/font_size = 70
text = "17"
horizontal_alignment = 1

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="Load_Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="New_Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Level_Select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
